--- a/creations/static/stylesheets/research.sass
+++ b/creations/static/stylesheets/research.sass
@@ -1,4 +1,10 @@
 #research
+  ul
+    @include bulleted-list
+
   #content
-    p
-      display: inline
+    .help-message
+      margin-left: $whitespace / 2
+
+      p
+        display: inline
