--- a/website/static/stylesheets/markdown.sass
+++ b/website/static/stylesheets/markdown.sass
@@ -2,7 +2,7 @@
   h1, h2, h3, h4
     margin-top: $whitespace
 
-  p, ul, ol, h1, h2, h3, h4, .image-wrapper
+  p, ul, ol, h1, h2, h3, h4, blockquote, .image-wrapper
     margin-bottom: $whitespace / 1.5
 
     &:last-child
