Don't let small radio image or small bird image get too big

--- a/birds/static/stylesheets/birds.sass
+++ b/birds/static/stylesheets/birds.sass
@@ -28,7 +28,7 @@
     #main-photo
       display: block
       float: left
-      width: 45%
+      max-width: 45%
       height: auto
       margin-right: 5%
       margin-bottom: $whitespace / 2
