--- a/waystohelp/static/stylesheets/waystohelp.sass
+++ b/waystohelp/static/stylesheets/waystohelp.sass
@@ -1,12 +1,9 @@
 #ways-to-help
   #all-ways-to-help
-    width: 105%
-    padding: 0 2.5%
-    position: relative
-    left: -5%
+    @include four-three-two-one-parent
 
     .way-to-help-card
-      @include four-three-two-one
+      @include four-three-two-one-child
       position: relative
       padding: 20px
       border-radius: $card-border-radius
