--- a/website/static/stylesheets/adminbar.sass
+++ b/website/static/stylesheets/adminbar.sass
@@ -37,11 +37,11 @@ $admin-padding: 10px
   input
     display: inline
 
+  form
+    @include pretty-form
+
   button,
   input
-    border: none
-    border-radius: 3px
-    padding: 2px 4px
     font-family: inherit
     font-size: inherit
     letter-spacing: inherit
