--- a/website/static/stylesheets/elements.sass
+++ b/website/static/stylesheets/elements.sass
@@ -1,3 +1,11 @@
+@mixin pretty-form
+  button,
+  input
+    border: none
+    border-radius: 3px
+    padding: 2px 4px
+
+
 .scroll-box
   overflow: scroll
 
