--- a/birds/templates/birds.html
+++ b/birds/templates/birds.html
@@ -15,7 +15,7 @@
 
   <form action="" method="get">
     <p>{{ form.as_p }}</p>
-    <input class="submit" type="submit" value="Submit">
+    <button type="submit">go</button>
   </form>
 
   {% ifnotequal search_birds None %}
